@startuml data_base_er_diagram

' Configuración visual
skinparam linetype ortho
hide circle

entity "User" as user {
  + id [PK] : int <<auto_increment>>
  --
  * first_name : varchar(255)
  * last_name : varchar(255)
  * username : varchar(255) <<unique>>
  + password : varchar(255) <<NULL>>
  * createdAt : date = Now()
  * updatedAt : date = Now()
  * is_bloked : boolean = false
  * use_password : boolean = false
}

entity "Meter" as meter {
  + id [PK] : int <<auto_increment>>
  --
  * number_meter : int
  * userId : int <<FK>>
  * status_meter : enum('active', 'inactive') = 'active'
}

entity "Bill" as bill {
  + id [PK] : int <<auto_increment>>
  --
  * estimated_amount : double
  * watts_consumed : double
  * start_date : date
  * end_date : date
  * meterId : int <<FK>>
  * userId : int <<FK>>
  * createdAt : date = Now()
  * updatedAt : date = Now()
}

entity "Measure" as measure {
  + id [PK] : int <<auto_increment>>
  --
  * watts : int
  * meterId : int <<FK>>
  * userId : int <<FK>>
  * createdAt : date = Now()
  * updatedAt : date = Now()
}

entity "Group" as group {
  + id [PK] : int <<auto_increment>>
  --
  * name : varchar(255)
}

entity "User_tokens" as token {
  + id [PK] : int <<auto_increment>>
  --
  * token : text
  * expires_at : date
  * createdAt : date = Now()
  * updatedAt : date = Now()
  * is_revoked : boolean = false
  * userId : int <<FK>>
}

' Tablas Intermedias (Many-to-Many)
entity "Users_groups" as user_group {
  + userId [PK][FK] : int
  + groupId [PK][FK] : int
}

entity "User_meters" as user_meter {
  + userId [PK][FK] : int
  + meterId [PK][FK] : int
}

' Relaciones basadas en los ALTER TABLE
user ||--o{ token
user ||--o{ bill
user ||--o{ meter
user ||--o{ measure
user ||--o{ user_group
user ||--o{ user_meter

group ||--o{ user_group

meter ||--o{ bill
meter ||--o{ measure
meter ||--o{ user_meter

@enduml